EXTRA_DIST = uim-test-utils.scm run-test.scm template.scm \
        test-action.scm test-custom-rt.scm test-custom.scm \
        test-i18n.scm test-im.scm test-intl.scm test-key.scm \
        test-lazy-load.scm test-plugin.scm \
        test-uim-test-utils.scm test-uim-util.scm test-ustr.scm \
        test-util.scm test-example.scm \
	test-anthy.scm test-ng-key.scm

TESTS = run-test.scm
