EXTRA_DIST = uim-test-utils.scm run-test.scm template.scm \
        uim-test.scm uim-test-utils-new.scm uim-assertions.scm \
        test-action.scm test-custom-rt.scm test-custom.scm \
        test-im.scm test-intl.scm \
        test-lazy-load.scm test-plugin.scm \
        test-uim-test-utils.scm test-ustr.scm \
        test-example.scm \
        test-anthy.scm test-ng-key.scm \
        i18n/test-base.scm \
        i18n/test-language.scm \
        key/test-base.scm \
        key/test-predicate.scm \
        key/test-translator.scm \
        util/test-character-conversion.scm \
        util/test-character-predicate.scm \
        util/test-list.scm \
        util/test-misc.scm \
        util/test-multi-segment.scm \
        util/test-r5rs.scm \
        util/test-record.scm \
        util/test-rk.scm \
        util/test-srfi.scm \
        util/test-string.scm \
        util/test-uim.scm

if DEBUG
if DO_CHECK_IN_TEST
TESTS = run-test.scm
endif
endif
